force-app/main/default/objects/Commission__c/fields/Sales_Agent__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agent__c</fullName>
    <label>Sales Agent</label>
    <referenceTo>Sales_Agent__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>