force-app/main/default/objects/Commission__c/validationRules/Rate_greater_than_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Rate_greater_than_100</fullName>
    <active>true</active>
    <errorConditionFormula>Rate__c &gt; 1</errorConditionFormula>
    <errorMessage>The rate can&apos;t be greater than 100%</errorMessage>
</ValidationRule>