force-app/main/default/objects/Commission__c/validationRules/Rate_lower_or_equal_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Rate_lower_or_equal_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Rate__c &lt;= 0</errorConditionFormula>
    <errorMessage>The rate can&apos;t be lower or equal than 0</errorMessage>
</ValidationRule>